syntax = "proto3";

option go_package = "github.com/g13n4/go-ffmpeg-converter-microservice/video-converter";

service VideoConverter {
  rpc ConvertVideo(stream VideoToConvert) returns (stream ConvertedVideo);
}

message VideoInfo {
  string name = 1;
  int64 video_id = 2;
}


message VideoToConvert {
  VideoInfo video_info = 1;
  bytes video_feed = 2;
}


message ConvertedVideo {
  bytes video_feed = 1;
}
